# Health-Care-File-Manager

./: Appointment.cpp  Appointment.h  AppointmentPrimaryIndex.h  AppointmentSecondaryForDoctorID.h  CMakeLists.txt  CMakeLists.txt~  Doctor.cpp  Doctor.h  DoctorPrimaryIndex.h  DoctorSecondaryIndexForName.h  Entity.h  FileHandler.cpp  FileHandler.h  FileManager.cpp  FileManager.h  Index.h  PrimaryIndex.h  PrimaryIndex_Appoinment.cpp  PrimaryIndex_Appoinment.h  PrimaryIndex_Doctor.cpp  PrimaryIndex_Doctor.h  README.md  Record.h  SecondaryIndex.h  SecondaryIndex_Doctor.cpp  SecondaryIndex_Doctor.h  appointments.txt  appointmentsAvailableeList.txt  appointmentsDocotorIDSecondaryIndex.txt  appointmentsPrimaryIndex.txt  doctors.txt  doctorsAvailalbeList.txt  doctorsNameSecondaryIndex.txt  doctorsPrimaryIndex.txt  main.cpp
Appointment/: appoint.hpp  primIndex.hpp  secondaryindex-DocID.hpp
Doctor/: doc.hpp  primIndex.hpp  secondaryindex-name.hpp
FileManager/: FileManager.cpp  FileManager.hpp
General/: entity.hpp  primaryIndex.hpp
